--- a/credenz20/src/Components/Navbar/NavBar.css
+++ b/credenz20/src/Components/Navbar/NavBar.css
@@ -1,3 +1,15 @@
 .nav-item {
     margin-left: 20px;
 }
+
+#signup {
+    margin-right: 3%;
+}
+
+/*for Galaxy phones*/
+@media only screen and (max-width: 280px) {
+    
+    .navbar {
+        padding: 0.5rem 0rem;
+    }
+}
