--- a/credenz20/src/Components/RegisterComponent/Register.module.css
+++ b/credenz20/src/Components/RegisterComponent/Register.module.css
@@ -4,8 +4,9 @@ input[type="number"]::-webkit-outer-spin-button {
     margin: 0;
 }
 
-body {
+.body {
     background: rgb(44, 43, 43);
+    height: 100%;
 }
 
 label {
