--- a/credenz20/src/Components/ContactComponent/contact.css
+++ b/credenz20/src/Components/ContactComponent/contact.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
+.con{
+    background-color: rgb(185, 241, 233);
+    min-height: 100vh;
+}
 .tab{
    
     align-items: center;
@@ -7,33 +11,74 @@
   
 }
 .select h1 {
-       border-bottom:6px solid #2196f3; 
+    border-top:5px solid #734ea0 !important; 
 }
+
 .tab h1{
     color:#40497a;
     font-family: 'Alata', sans-serif;
     font-weight: bold;
     font-size:40px;
-    /* border-bottom:6px solid #2196f3; */
+    border-radius: 5px;
+    background-color:white;
     padding:10px;
     cursor:pointer;
+    border-top:4px solid #486881; 
+    box-shadow:  0 0px 2px 3px rgb(118, 190, 190) ;
+}
+.tab h1:hover{
+
+    box-shadow:  0 0px 2px 3px rgb(118, 190, 190) ;
 }
 .head{
     
     margin-top:5vh;
     justify-content: center;
-    border:1px solid black;
+   
 }
 .content{
-    margin-top:5vh;
-    height:40vh;
-    border:1px solid black;
     justify-content: center;
 }
-
-.card{
-    margin:10px;
+div .contacts {
+   margin:30px;
+   box-shadow: 0 8px 8px -4px gray;
 }
 .card-title{
     text-align: center;
+}
+ .contacts-img{
+    width:100px;
+    height: 170px;
+}
+.address{
+    color:#40497a;
+    font-family: 'Alata', sans-serif;
+    text-align: center;
+}
+.addr{
+    bottom:10px;
+    position:absolute;
+    width:50vw;
+    left:50%;
+    transform:translate(-50%,0);
+}
+.feedback{
+    width:500px;
+    margin:auto;
+    margin-top:60px;
+    color:#40497a;
+    font-family: 'Alata', sans-serif;
+    font-size: 20px;
+}
+.feedback button[type="submit"]
+{
+    margin-left:50%;
+    width:200px;
+    transform: translate(-50%,0);
+}
+@media only screen and (max-width:425px)
+{
+    .feedback{
+        width:300px;
+    }
 }
