--- a/credenz20/src/Components/SideEvents/leaderboard.css
+++ b/credenz20/src/Components/SideEvents/leaderboard.css
@@ -2,8 +2,10 @@ thead tr{
   height:10vh;
 }
 .body{
-    background-color: black;
-    
+    background-color: #0a1018;
+    box-shadow: 0px 0 4px 2px rgb(100, 104, 109);
+    justify-content: center ;
+    border-radius: 5px;
 }
 .table{
     width:90%;
@@ -39,3 +41,11 @@ tr td:first-child { border-top-left-radius: 10px; }
 tr td:last-child { border-top-right-radius: 10px; }
 tr td:first-child { border-bottom-left-radius: 10px; }
 tr td:last-child { border-bottom-right-radius: 10px; }
+
+.leaderboard-head{
+    height: 15vh;
+    border-radius: 5px;     
+    background-color:rgb(5, 34, 59);
+    box-shadow: 0px 0 4px 2px rgb(100, 104, 109);
+    margin-bottom: 5px;
+}
