--- a/credenz20/src/Components/ContactComponent/contact.css
+++ b/credenz20/src/Components/ContactComponent/contact.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
-.con{
+.cont{
     background-color: rgb(185, 241, 233);
     min-height: 100vh;
+    margin-top:-30px;
 }
 .tab{
    
@@ -39,14 +40,14 @@
 .content{
     justify-content: center;
 }
-div .contacts {
+.contacts{
    margin:30px;
    box-shadow: 0 8px 8px -4px gray;
 }
 .card-title{
     text-align: center;
 }
- .contacts-img{
+.contacts-img .card-img-top{
     width:100px;
     height: 170px;
 }
@@ -56,19 +57,22 @@ div .contacts {
     text-align: center;
 }
 .addr{
-    bottom:10px;
+    bottom:-60px;
     position:absolute;
     width:50vw;
     left:50%;
     transform:translate(-50%,0);
 }
-.feedback{
+ .feedback{
     width:500px;
     margin:auto;
     margin-top:60px;
     color:#40497a;
     font-family: 'Alata', sans-serif;
     font-size: 20px;
+}
+.feedback label{
+    color:#40497a;
 }
 .feedback button[type="submit"]
 {
