--- a/credenz20/src/Components/ContactComponent/contact.css
+++ b/credenz20/src/Components/ContactComponent/contact.css
@@ -57,22 +57,19 @@
     text-align: center;
 }
 .addr{
-    bottom:-60px;
-    position:absolute;
-    width:50vw;
-    left:50%;
-    transform:translate(-50%,0);
+    justify-content: center;
+   margin-top:5vh;
 }
  .feedback{
     width:500px;
     margin:auto;
-    margin-top:60px;
+    margin-top:30px;
     color:#40497a;
     font-family: 'Alata', sans-serif;
-    font-size: 20px;
 }
 .feedback label{
     color:#40497a;
+    font-size: 20px;
 }
 .feedback button[type="submit"]
 {
@@ -84,5 +81,11 @@
 {
     .feedback{
         width:300px;
+    }
+}
+@media only screen and (max-width:768px)
+{
+    .tab h1{
+        font-size:30px;
     }
 }
