--- a/credenz20/src/Components/HomeComponent/Aboutus/Aboutus.module.css
+++ b/credenz20/src/Components/HomeComponent/Aboutus/Aboutus.module.css
@@ -12,7 +12,9 @@
 }
 
 .credenz{
-    background-color: #fafafa;
+    /* background-color: #fafafa; */
+    background-color: #e5ebf091;
+
 }
 
 .pisb{
