--- a/credenz20/src/App.css
+++ b/credenz20/src/App.css
@@ -4,5 +4,6 @@
 }
 
 body {
-  background-image: url(./assests/img/bg1.jpg);
+  /* background-image: url(./assests/img/bg1.jpg); */
+  background-color: var(--main-brand);
 }
