--- a/credenz20/src/Components/HomeComponent/sponsors/sponsors.module.css
+++ b/credenz20/src/Components/HomeComponent/sponsors/sponsors.module.css
@@ -4,5 +4,20 @@
 }
 
 .sponsor{
-    width: 90%;
+    width: 70%;
+    border-radius: 50%;
 }
+
+@media (max-width : 600px){
+    .sponsor{
+        width : 50%;
+        margin: 10px 0;
+    }
+}
+
+/* @media (max-width: 768px){
+    .sponsor{
+        width : 90%;
+    }
+
+} */
