--- a/credenz20/src/Components/sideEventButton/sideEvent.module.css
+++ b/credenz20/src/Components/sideEventButton/sideEvent.module.css
@@ -32,7 +32,7 @@ a {
 .social ul li {
     display: block;
     margin: 5px;
-    background: rgba(200, 158, 172, 0.5);
+    background:var(--light-accent);
     width: 320px;
     text-align: right;
     padding: 10px;
@@ -43,7 +43,7 @@ a {
 
 .social ul li:hover {
     transform: translate(110px,0);
-    background: #c44a73;
+    background: var(--light-shades);
     transition: all 1.5s;
 }
 
@@ -52,7 +52,7 @@ a {
 }
 
 .social ul li:hover i{
-    color: #c44a73;
+    color: var(--light-shades);
     background: white;
     transform: rotate(360deg);
     transition: all 1.5s;
