--- a/credenz20/src/App.css
+++ b/credenz20/src/App.css
@@ -5,5 +5,5 @@
 
 body {
   /* background-image: url(./assests/img/bg1.jpg); */
-  background-color: var(--main-brand);
+  background-color: var(--dark-shade);
 }
