--- a/credenz20/src/index.css
+++ b/credenz20/src/index.css
@@ -19,5 +19,6 @@ code {
   /* --dark-accent: #b76572;
   --dark-shades: #3859ab; */
   --lighter-accent: #f0f0f1;
-  --dark-shade: #27252E;
+  --dark-shade: #0c0c0c;
+  
 }
