--- a/credenz20/src/Components/HomeComponent/Aboutus/Aboutus.module.css
+++ b/credenz20/src/Components/HomeComponent/Aboutus/Aboutus.module.css
@@ -25,25 +25,25 @@
     /* background-color: #e5ebf091; */
 }
 
-
+/* 
 .content {
-    /* color: white; */
+    color: white;
     color: rgba(255,176,0,.8);
     background-color: var(--light-accent);
-    /* background-color: #333; */
+    background-color: #333;
     text-shadow: rgba(185,128,0,.2) 0.5em 0 0.2em;
-    /* border: .07em solid #222; */
+    border: .07em solid #222;
     padding: .5em 1em;
-    /* box-shadow: inset 0 0 4em rgba(0,0,0,.5); */
-    /* border-radius: 1em; */
+    box-shadow: inset 0 0 4em rgba(0,0,0,.5);
+    border-radius: 1em;
     background-image: linear-gradient(to bottom,rgba(255,255,255,.05),rgba(255,255,255,.15) .5em,rgba(255,255,255,.05) 2em,rgba(255,255,255,.05) 2em,rgba(255,255,255,0)),linear-gradient(to bottom,#222,#222 50%,#000 50%,#000);
     background-size: 100% 100%,100% 2px;
     min-height: 5em;
     white-space: pre-wrap;
     tab-size: 4;
     position: relative;
-}
-@keyframes scanline {
+} */
+/* @keyframes scanline {
     from {
         background-position: 0 -3.3em
     }
@@ -65,7 +65,7 @@
     cursor: text;
     background-image: linear-gradient(to bottom,rgba(255,176,0,0) 0,rgba(255,176,0,0) 1em,rgba(255,176,0,.05) 3em,rgba(255,176,0,.15) 3.1em,rgba(255,176,0,.01) 3.11em,rgba(255,176,0,.05) 3.2em,rgba(255,176,0,0) 3.3em,rgba(255,176,0,0) 10em);
     background-size: cover;
-}
+} */
 
 .content::after {
     content: "";
@@ -73,6 +73,7 @@
 .content {
     display: block;
     overflow: auto;
+    color: #ccc;
     box-sizing: border-box;
 }
 
