--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,38 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+    overflow-y: scroll;
+    overflow-x: hidden;
+
+    /* position: absolute;
+    top: 10px;
+    left: 20px;
+    bottom: 10px;
+    right: 0;
+    padding: 30px; 
+} */
+}
+
+html {
+  overflow: auto;
+}
+
+
+/* Scrollbar Styling */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  /* background-color: #ebebeb; */
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: #6d6d6d; 
 }
 
 code {
