--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,8 @@ body {
     left: 20px;
     bottom: 10px;
     right: 0;
-    padding: 30px; 
-} */
+    padding: 30px;  */
+
 }
 
 html {
@@ -28,7 +28,7 @@ html {
 }
 
 ::-webkit-scrollbar-track {
-  /* background-color: #ebebeb; */
+  background-color: #ebebeb;
   -webkit-border-radius: 10px;
   border-radius: 10px;
 }
