--- a/src/Components/SideEvents/leaderboard.css
+++ b/src/Components/SideEvents/leaderboard.css
@@ -73,7 +73,7 @@ tr td:last-child { border-bottom-right-radius: 10px; }
   width:160px;
   color:white;
   height: 35px;
-   /* background-color:rgb(79, 115, 139); */
+   background-color:rgb(79, 115, 139);
    background-color:  rgb(5, 34, 59);
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
