--- a/src/Components/SignupComponent/Signup.css
+++ b/src/Components/SignupComponent/Signup.css
@@ -28,6 +28,7 @@
     height: auto;
     margin-bottom: 20px;
     padding-bottom: 20px;
+    
   }
 }
 .container {
@@ -44,6 +45,7 @@
   top: 20px;
   position: relative;
   width: 50%;
+  margin-bottom: 10px;
 }
 
 .signup {
@@ -139,6 +141,10 @@ input::-moz-focus-inner {
   color: #d0d0d2;
 }
 
+.footer{
+  margin-top: 88vh;
+}
+
 @media (max-width: 767px) {
 
   .container {
@@ -165,6 +171,14 @@ input::-moz-focus-inner {
     width: 100%;
     max-height: 500px;
     top: 10px;
+  }
+
+
+
+  @media (max-width: 600px) {
+    .footer{
+      margin-top: 102vh;
+    }
   }
 
 }
