--- a/src/Components/SignupComponent/Signup.css
+++ b/src/Components/SignupComponent/Signup.css
@@ -1,184 +1,62 @@
-/*@import url('https://rsms.me/inter/inter-ui.css');*/
+/*
+*
+* ==========================================
+* CUSTOM UTIL CLASSES
+* ==========================================
+*
+*/
 
-::selection {
-  background: #2D2F36;
-}
-::-webkit-selection {
-  background: #2D2F36;
-}
-::-moz-selection {
-  background: #2D2F36;
-}
-
-.page {
-  display: flex;
-  margin-top: 10%;
-  flex-direction: column;
-  position: absolute;
-  place-content: center;
-  width: 100%;
+.border-md {
+  border-width: 2px;
 }
 
-.input {
-  border-bottom: 3px solid white;
+.btn-facebook {
+  background: #405D9D;
+  border: none;
 }
 
-@media (max-width: 767px) {
-  .page {
-    height: auto;
-    margin-bottom: 20px;
-    padding-bottom: 20px;
-    
-  }
-}
-.container {
-  display: flex;
-  height: 320px;
-  vertical-align: middle;
-  margin: 0 auto;
-  width: 640px;
+.btn-facebook:hover, .btn-facebook:focus {
+  background: #314879;
 }
 
-.left {
-  background: white;
-  height: calc(100% - 40px);
-  top: 20px;
-  position: relative;
-  width: 50%;
-  margin-bottom: 10px;
+.btn-twitter {
+  background: #42AEEC;
+  border: none;
 }
 
-.signup {
-  font-size: 50px;
-  font-weight: 900;
-  margin: 50px 40px 40px;
-  position: relative;
-}
-.text-left {
-  color: #999;
-  font-size: 14px;
-  line-height: 1.5;
-  margin: 20px;
-  position: relative;
+.btn-twitter:hover, .btn-twitter:focus {
+  background: #1799e4;
 }
 
-.right {
-  background: rgba(14, 69, 114, 0.5);
-  box-shadow: 0px 0px 40px 16px rgba(0,0,0,0.22);
-  color: #F1F1F2;
-  position: relative;
-  width: 50%;
-  top: -50px;
-  height: 500px;
-}
 
-svg {
-  position: absolute;
-  width: 320px;
-}
-path {
-  fill: none;
-  stroke: url(#linearGradient);;
-  stroke-width: 4;
-  stroke-dasharray: 240 1386;
-}
-.form {
-  margin: 40px;
-  position: absolute;
-}
-label {
-  color:  ivory;
-  display: block;
-  font-size: 14px;
-  height: 16px;
-  margin-top: 20px;
-  margin-bottom: 5px;
-}
 
 /*
-input[type="email"],[type="text"] {
-  border: 0;
-  border-bottom: 3px solid ivory;
-}
+*
+* ==========================================
+* FOR DEMO PURPOSES
+* ==========================================
+*
 */
-input[type="password"]{
-  border: 0;
-  border-bottom: 1px solid ivory;
-  margin-bottom: 40px;
+
+body {
+  min-height: 100vh;
+  background-color: black;
 }
 
-input[type="submit"] {
-  border: none;
+.form-control:not(select) {
+  padding: 1.5rem 0.5rem;
 }
 
-input {
-  background: transparent;
-  /*border: 1px solid ivory;
-  border-radius: 10px;*/
-  border: none;
-  border-bottom: 1px solid ivory;
-  color: #f2f2f2;
-  font-size: 20px;
-  height: 30px;
-  line-height: 30px;
-  outline: none !important;
-  width: 100%;
+select.form-control {
+  height: 52px;
+  padding-left: 0.5rem;
 }
 
-input::-moz-focus-inner { 
-  border: 0; 
+.form-control::placeholder {
+  color: #ccc;
+  font-weight: bold;
+  font-size: 0.9rem;
 }
-#submit {
-  /* color: #707075; */
-  /* margin-top: 40px; */
-  transition: color 300ms;
-  color: #fff;
-}
-#submit:focus {
-  color: #f2f2f2;
-}
-#submit:active {
-  color: #d0d0d2;
-}
-
-.footer{
-  margin-top: 88vh;
-}
-
-@media (max-width: 767px) {
-
-  .container {
-    flex-direction: column;
-    height: 630px;
-    width: 320px;
-  }
-
-  .signup {
-    font-size: 30px;
-    margin: 40px 30px 20px;
-  }
-
-  .left {
-    height: 100%;
-    left: 20px;
-    width: calc(100% - 40px);
-    max-height: 270px;
-  }
-
-  .right {
-    flex-shrink: 0;
-    height: 100%;
-    width: 100%;
-    max-height: 500px;
-    top: 10px;
-  }
-
-
-
-  @media (max-width: 600px) {
-    .footer{
-      margin-top: 102vh;
-    }
-  }
-
+.form-control:focus {
+  box-shadow: none;
 }
