--- a/src/Components/Navbar/NavBar.css
+++ b/src/Components/Navbar/NavBar.css
@@ -11,7 +11,7 @@ a.active{
     border-bottom: 3px solid rebeccapurple;
 }
 
-span:hover{
+samp:hover{
     padding-bottom: 5px;
     border-bottom: 3px solid #1e90ff;
     color: #add8e6 !important;
