adds animation in contact us

--- a/src/Components/ContactComponent/contact.css
+++ b/src/Components/ContactComponent/contact.css
@@ -45,25 +45,45 @@ color:#add8e6;
 .content{
     justify-content: center;
 }
+
+@keyframes slidedown{
+    0%{margin-left:-30px};
+    100%{margin-top: 0px};
+}
 .contacts{
    margin:30px;
    box-shadow: 0 -2px 10px rgba(0, 0, 0, 1);
    background-color: #0a1018;
    border: none !important;
    border-radius: 5px;
+  animation-name: slidedown;
+  animation-duration:  1s;
+  animation-fill-mode: backwards;
+  animation-timing-function: ease;
+}
+
+.contacts:nth-child(2){
+    animation-delay: 0.2s;
+}
+
+.contacts:nth-child(3){
+    animation-delay: 0.4s;
 }
 .card .card-body{
     border:none !important;
+  
 }
 .contacts .card-body{
     background-color: #0a1018;
     color:white;
+  
    
 }
 .card-title{
     text-align: center;
-   
+  
 }
+
 .contacts-img .card-img-top{
     width:100px;
     height: 160px;
