--- a/src/Components/Footer/footer.module.css
+++ b/src/Components/Footer/footer.module.css
@@ -35,11 +35,19 @@
        font-size: 1 rem;
        
    }
+
+   .footer{
+    justify-content: center;
+    display: inherit;
+    background: #262626;
+    padding: 10px 0;
+    padding-left: 20px;
+    color: #fff;
+    }
 }
 
 @media only screen and (max-width: 280px){
     footer-font{
         font-size: 10px;
-        
     }
 }
