--- a/src/Components/Modal/Modal.css
+++ b/src/Components/Modal/Modal.css
@@ -62,7 +62,7 @@
 .modal-login .btn, .modal-login .btn:active {        
 	font-size: 16px;
 	font-weight: bold;
-	background: #19aa8d !important;
+	background: var(--light-shades) !important;
 	border-radius: 3px;
 	border: none;
 	min-width: 140px;
