--- a/src/Components/sideEventButton/sideEvent.module.css
+++ b/src/Components/sideEventButton/sideEvent.module.css
@@ -70,3 +70,33 @@ a {
     text-align: center;
     font-size: 20px;
 }
+
+
+@media (max-width: 600px){
+
+.social ul li i {
+    margin-left: 7.5px;
+    color: #000;
+    background: white;
+    padding: 7.5px;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    transform: rotate(0deg);
+    text-align: center;
+    font-size:15px;
+}
+
+.social ul li {
+    display: block;
+    margin: 5px;
+    background:var(--light-accent);
+    width: 305px;
+    text-align: right;
+    padding: 10px;
+    border-radius: 0 50px 50px 0;
+    transition: all 1.5s;
+  
+}
+
+}
