--- a/src/Components/Footer/footer.module.css
+++ b/src/Components/Footer/footer.module.css
@@ -1,34 +1,43 @@
-.social_container {
-    padding:0 50px;
+.social{
+   margin: 10px 0;
+   margin-left: 25%;
+   margin-bottom: 20px;
   }
 
 .footer{
+   
     justify-content: center;
     display: flex;
     background: #262626;
     padding: 10px 0;
     color: #fff;
-
-}
- 
-/* 
-.instagram {
-    color: black;
 }
 
-.facebook {
-    margin-right: 10px;
+.iconfb{
+    background-color: blue;
+    border-radius: 50%;
+    padding: 5px 15px;
+    font-size: 25px;
+    margin: 0 3px;
 }
 
-.facebook:hover {
-    color: #4968ad;
-    transform: translateY(-2px);
+.iconlink{
+    background-color: blue;
+    border-radius: 50%;
+    padding: 8px 0;
+    padding-right: 12px;
+    font-size: 25px;
+    margin: 0 3px;
 }
 
-.instagram:hover {
-    color: black;
-    transform: translateY(-2px);
-} */
+.iconinsta{
+    background-color: blue;
+    border-radius: 50%;
+    padding: 8px 0;
+    padding-right: 12px;
+    font-size: 25px;
+    margin: 0 3px;
+}
 
 @media (max-width: 600px){
    footer-font{
@@ -44,10 +53,43 @@
     padding-left: 20px;
     color: #fff;
     }
+
 }
 
 @media only screen and (max-width: 280px){
     footer-font{
         font-size: 10px;
+    }
+}
+
+@media (max-width: 600px){
+    .iconfb{
+        display:initial ;
+    }
+
+    .iconinsta{
+        display: initial;
+    }
+
+    .iconlink{
+        display: initial;
+    }
+}
+
+@media( min-width:768px){
+    .iconlink{
+        display: none;
+    }
+
+    .iconfb{
+        display:none;
+    }
+
+    .iconinsta{
+        display:none;
+    }
+
+    .social{
+        margin-bottom: 0;
     }
 }
