--- a/src/Components/Team/Member.module.css
+++ b/src/Components/Team/Member.module.css
@@ -4,8 +4,12 @@
 }
 
 .member{
-    width: 15rem;
+    width: 14rem;
     margin:30px;
+    box-shadow: 0 -2px 10px rgba(0, 0, 0, 1);
+    background-color: #0a1018;
+    border: none !important;
+    border-radius: 5px;
     animation-name: slidedown;
     animation-duration:  1s;
     animation-fill-mode: backwards;
@@ -18,6 +22,13 @@
  .member:nth-child(3){
     animation-delay: 0.4s;
 }
+
+ .teamCardBody{
+    border:none !important;
+    background-color:  #0a1018;
+    color:white;   
+}
+
 .icon{
     text-align: center;
 }
