--- a/src/Components/Navbar/NavBar.css
+++ b/src/Components/Navbar/NavBar.css
@@ -2,7 +2,10 @@
     margin-left: 20px;
     color: white;
 }
-
+.pisblogo{
+    width:6rem;
+    height: 2rem;
+}
 a:visited{
     color: white;
 }
