--- a/src/Components/SideEvents/sideEvent.css
+++ b/src/Components/SideEvents/sideEvent.css
@@ -1,7 +1,7 @@
 .event-card{
     width:14rem;
     margin:30px;
-    cursor: pointer;
+    /* cursor: pointer; */
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 1);
     background-color: #0a1018;
     border: none !important;
@@ -27,6 +27,7 @@
 .event-card .card-body{
     background-color: #0a1018;
     color:white;   
+    text-align: center;
 }
 
 .event-title{
@@ -34,3 +35,19 @@
     color:white;
     text-align: center;
 }
+.play{
+    border:1px solid white;
+    outline: none;
+    background-color: transparent;
+    box-shadow: 0 -1px 5px rgba(0, 0, 0, 1);
+    color:white;
+    width:130px;
+    height:30px;
+    padding:3px   !important;
+   
+    font-family: 'Courier New', Courier, monospace;
+    /* display: none; */
+}
+
+
+
