--- a/src/Components/RegisterComponent/Register.scss
+++ b/src/Components/RegisterComponent/Register.scss
@@ -15,7 +15,7 @@
     }
     .container {
         margin: 20px auto;
-        background: green;
+        // background: green;
         height: max-content;
         @include flexCentered(column);
         label {
