--- a/src/Components/SideEvents/sideEvent.css
+++ b/src/Components/SideEvents/sideEvent.css
@@ -1,15 +1,16 @@
 .event-card{
-    width:14rem;
+    width: 14rem;
     margin:30px;
-    /* cursor: pointer; */
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 1);
-    background-color: #0a1018;
+    background-color: #192b42;
     border: none !important;
-    border-radius: 5px;
-   animation-name: slidedown;
-   animation-duration:  1s;
-   animation-fill-mode: backwards;
-   animation-timing-function: ease;
+    /* border-radius: 7px; */
+   font-family:  'Alata', sans-serif;
+  
+    animation-name: slidedown;
+    animation-duration:  1s;
+    animation-fill-mode: backwards;
+    animation-timing-function: ease;
 }
 
 .event-card:nth-child(2){
@@ -25,7 +26,7 @@
   
 }
 .event-card .card-body{
-    background-color: #0a1018;
+    background-color: #192b42;
     color:white;   
     text-align: center;
 }
@@ -41,13 +42,21 @@
     background-color: transparent;
     box-shadow: 0 -1px 5px rgba(0, 0, 0, 1);
     color:white;
-    width:130px;
-    height:30px;
-    padding:3px   !important;
+    width:120px;
+    height:40px;
+   align-items: center;
    
-    font-family: 'Courier New', Courier, monospace;
+   
     /* display: none; */
 }
 
 
-
+.side-event-logo{
+    height:10rem;
+    opacity: 0.9;
+   width:10rem;
+    margin:auto;
+    margin-top: 20px;
+    /* border-radius:50%; */
+    border:2px solid #030303;
+}
