--- a/src/Components/ContactComponent/contact.css
+++ b/src/Components/ContactComponent/contact.css
@@ -107,6 +107,7 @@ color:#add8e6;
     margin-top: 20px;
     border-radius:50% !important;
     border:2px solid #1e90ff;
+    padding:5px;
 }
 
 .address{
